# Beacon

./: .gitignore  CMakeLists.txt  README.md  README_progress.md  ReleaseNotes.txt  VERSION  beacon-build.py  build.py  build.sh  build_all.sh  build_backup.sh  build_beacon.py  check_tests.py  config.json  demo.sh  example.cpp  kill_all.sh  professional_startup.sh  release.sh  restore.sh  run.sh  run_system.sh  run_tests.sh  scary.sh  script.sh  test_manual.sh
docs/: DOCUMENTATION_SUMMARY.md  (+3 more)
experimental/apps/md_generator/: CMakeLists.txt  README.md  config_provider.cpp  config_provider.h  config_validator.cpp  fix_generator.h  itch_generator.h  main.cpp  message_generator.cpp  message_generator.h  protocol_generator.h  run.sh  stats_manager.cpp  stats_manager.h  symbol_generation_data.h  symbol_parameters.h
src/: CMakeLists.txt  itch_market_data_processor.cpp  main.cpp
src/apps/: README.md  example_nyse_usage.cpp  example_tick_distinguish.cpp  example_usage.cpp
src/apps/beacon_orchestrator/: README.md  beacon_orchestrator.py
src/apps/client_algorithm/: CMakeLists.txt  beacon-build-debug.sh  beacon-build-release.sh  build-debug.sh  build.sh  config_provider.cpp  demo_end_to_end.sh  demo_startup.sh  example_latency_tracking.cpp  main.cpp  main_algo.cpp
src/apps/ex_match/: CMakeLists.txt  ex_match.cpp
src/apps/exchange_market_data_generator/: CMakeLists.txt  ISerializeMarketDataMessages.h  README.md  beacon-build-debug.sh  build-debug.sh  build-release.sh  build.sh  cme_config.json  config_provider.cpp  config_provider.h  main.cpp  message_generator.cpp  message_generator.h  output.itch  output.mdp  output.pillar  pillar_config.json  price_ranges.json  stats_manager.cpp  symbol_parameters.h  test_output.itch
src/apps/exchange_market_data_generator/serializers/: cme_serializer.cpp  iserialize_market_data_messages.h  itch_serializer.h  nsdq_serializer.cpp  nsdq_serializer.h  nyse_serializer.cpp  nyse_serializer.h
src/apps/exchange_market_data_generator/utils/: string_utils.cpp  string_utils.h
src/apps/exchange_market_data_playback/: ARCHITECTURE.md  CMakeLists.txt  PRIORITY_SYSTEM.md  README.md  beacon-build-debug.sh  build.sh  config_burst.json  config_priority.json  config_tcp.json  config_udp_slow.json  config_wave.json  main.cpp  market_data_playback.h  message_buffer.h  message_sender.h  playback_rule.h  playback_state.h  rules_engine.h  run.sh
src/apps/exchange_market_data_playback/rules/: common_rules.h  priority_rules.h
src/apps/exchange_matching_engine/: build-debug.sh  build.sh  protocol_adapters.h
src/apps/generator/: CMakeLists.txt  beacon-build-release.sh  config_provider.cpp  main.cpp  run.sh  stats_manager.cpp  symbol_generation_data.h
src/apps/generator/serializers/: cme_serializer.h  itch_serializer.cpp  market_data_serializer.h  nsdq_serializer.h  nyse_serializer.h  placeholder_serializers.h
src/apps/generator/tests/: test_config_provider.cpp
src/apps/matching_engine/: CMakeLists.txt  beacon-build-release.sh  beacon-run-demo.py  main.cpp
src/apps/md_algo/: md_algo.cpp
src/apps/md_client/: CMakeLists.txt  md_client.cpp
src/apps/md_creator/: CMakeLists.txt  md_creator.cpp  message_config_validator.cpp  message_config_validator.h  message_generator.cpp  message_generator.h
src/apps/md_generator/: CMakeLists.txt  main.cpp  message_generator.cpp  message_generator.h
src/apps/md_playback/: md_playback.cpp
src/apps/md_server/: CMakeLists.txt  md_server.cpp
src/apps/nsdq/execution/: main.cpp
src/apps/nsdq/market_data/: generator.cpp  generator_main.cpp  listener.cpp  main.cpp  replayer.cpp  replayer_main.cpp
src/apps/nsdq/matching_engine/: main.cpp  tcp_server.cpp  tcp_server.h
src/apps/nsdq/md_generator/: main_generator.cpp  md_generator.cpp
src/apps/nsdq/md_listener/: main_listener.cpp  md_listener.cpp
src/apps/nsdq/md_playback/: main_replayer.cpp  main_replayer.cpp.bak
src/apps/playback/: CMakeLists.txt  README.md  beacon-build-release.sh  beacon-build.py  binary_file_replayer.h  main.cpp  market_data_playback.h  playback_state.h
src/apps/playback/advisors/: message_priority_classifier.cpp  price_move_threshold_priority_classifier.cpp
src/apps/playback/authorities/: playback_rule_interface.h  rules_engine.h
src/apps/playback/interfaces/: IClassifyMessagePriorities.h  IClassifyMessagePriority.h  IMessagePriorityClassifier.h  IMessageSender.h  IPlaybackMarketData.h  IPlaybackRules.h  IReplayMarketData.h  README.md
src/apps/playback/playback_authorities/: rules_engine.h
src/apps/playback/playback_types/: playback_type_factory.cpp  playback_type_factory.h
src/apps/playback/senders/: message_sender.h
src/apps/playback/wiki/: Configuration.md  Home.md  Overview.md
src/common/: cpu_pause.h  spsc_ringbuffer.h
src/libs/common/: CMakeLists.txt  nyse_message_types.h
src/libs/exchange_protocols/nsdq/: itch_ouch_enums.h
src/libs/exchanges/: CMakeLists.txt
src/libs/exchanges/cme/: cme_message_types.h
src/libs/utils/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists.txt.bak  README.md  nsdq_execution  nsdq_generator  nsdq_listener  nsdq_replayer  rename_tests.sh  test_binary_files.cpp  test_config.cpp  test_file_generator.cpp  test_udp_modes.cpp
tests/algorithm/: test_order_management.cpp  test_risk_limits.cpp  test_strategy_logic.cpp
tests/core/: test_latency_tracker.cpp  test_pinned_thread.cpp  test_ringbuffer.cpp  test_tcp_client.cpp  test_tcp_server.cpp  test_thread_utils.cpp  test_udp_receiver.cpp
tests/integration/: test_end_to_end.cpp  test_tick_to_trade.cpp
tests/itch_file_generator/: itch_file_generator.cpp
tests/market_data/: test_message_generation.cpp  test_serializers.cpp  test_symbol_parameters.cpp
tests/matching_engine/: test_execution_reports.cpp  test_order_book.cpp  test_order_matching.cpp
tests/protocols/: test_itch_messages.cpp  test_itch_serialization.cpp  test_mdp_messages.cpp  test_mdp_serialization.cpp  test_ouch_messages.cpp  test_ouch_serialization.cpp  test_pillar_messages.cpp  test_pillar_serialization.cpp
tests/test_itch_file_generator/: itch_file_generator.cpp
(+227 files in other folders)
